--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/aliraza944/school-time-table-management/issues"
   },
-  "homepage": "https://github.com/aliraza944/school-time-table-management#readme"
+  "homepage": "https://github.com/aliraza944/school-time-table-management#readme",
+  "dependencies": {
+    "concurrently": "^7.2.1",
+    "express": "^4.18.1"
+  }
 }
