--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "school-time-table-management",
   "version": "1.0.0",
   "description": "Schools near my area manually set the time table for all classes and the teachers. It usually takes them nearly a month to set the time table for the classes, teachers, resolve any conflicts in the time, setup and keep track of all the available slots. This is a tiring work that can be solved and made efficients by the coding.<br />",
+
+  "type":"module",
   "main": "index.js",
+
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -19,5 +26,8 @@
   "dependencies": {
     "concurrently": "^7.2.1",
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
