--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "school-time-table-management",
   "version": "1.0.0",
   "description": "Schools near my area manually set the time table for all classes and the teachers. It usually takes them nearly a month to set the time table for the classes, teachers, resolve any conflicts in the time, setup and keep track of all the available slots. This is a tiring work that can be solved and made efficients by the coding.<br />",
-
-  "type":"module",
+  "type": "module",
   "main": "index.js",
-
   "scripts": {
-
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm start --prefix frontend",
@@ -25,7 +22,8 @@
   "homepage": "https://github.com/aliraza944/school-time-table-management#readme",
   "dependencies": {
     "concurrently": "^7.2.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "react-router-dom": "6"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
