--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/aliraza944/school-time-table-management#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "concurrently": "^7.2.1",
     "express": "^4.18.1",
     "react-router-dom": "6"
