--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@reduxjs/toolkit": "^1.8.2",
     "concurrently": "^7.2.1",
     "express": "^4.18.1",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
