--- a/package.json
+++ b/package.json
@@ -21,11 +21,8 @@
   },
   "homepage": "https://github.com/aliraza944/school-time-table-management#readme",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.2",
     "concurrently": "^7.2.1",
-    "express": "^4.18.1",
-    "react-router-dom": "6",
-    "redux-persist": "^6.0.0"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
